# licenseid

./: .flake8  .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md  debug_gpl.db  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  pypi-publish.yml  test.yml  typecheck.yml
artifacts/: license_bpe.json
benchmarks/: bench_compare.py  bench_fts5_recall.py  bench_single.py  optimization-recommendation.md  perf_eval_report_20260502_132256.md  plan-revised.md  plan.md  summary.md
benchmarks/outputs/: fts5_recall_license-marker_20260507T055925Z.json  fts5_recall_license-marker_20260507T060215Z.json  fts5_recall_license-marker_20260507T060233Z.json  fts5_recall_license-marker_20260507T061326Z.json  perf_eval_license-marker_20260502_132256.json  perf_eval_license-marker_20260504T085613Z.json  perf_eval_license-marker_20260504T090942Z.json  perf_eval_license-marker_20260504T091846Z.json  perf_eval_license-marker_20260504T092122Z.json  perf_eval_license-marker_20260504T231424Z.json  perf_eval_license-marker_20260504T231501Z.json  perf_eval_license-marker_20260505T095414Z.json  perf_eval_license-marker_20260505T095558Z.json  perf_eval_license-marker_20260506T083120Z.json  perf_eval_license-marker_20260507T114930Z.json  perf_eval_license-marker_20260507T120849Z.json  perf_eval_main_20260502_132256.json  perf_eval_main_20260504T085613Z.json  perf_eval_main_20260504T090942Z.json  perf_eval_main_20260504T091846Z.json  perf_eval_main_20260504T092122Z.json  perf_eval_main_20260504T231424Z.json  perf_eval_main_20260504T231501Z.json  perf_eval_main_20260505T095414Z.json  perf_eval_main_20260505T095558Z.json  perf_eval_main_20260506T083120Z.json  perf_eval_main_20260507T120849Z.json  perf_eval_main_20260706T121225Z.json  perf_eval_speed_20260706T121225Z.json
docs/: new-matcher.md  optimization-recommendation.md
docs/implementation/: 2026-04-28-performance-optimization.md  2026-05-06-accuracy-optimizations.md  2026-05-07-speed-optimizations.md  2026-05-07-threshold-optimizations.md  2026-07-20-probe-anchored-windowing-plan.md  2026-07-20-speed-optimizations-round-2.md
scratch/: bench_compare.py  bench_single.py  benchmark_markers.py  debug_gpl.py  debug_norm_newline.py  debug_unescape.py
scripts/: analyze_thresholds.py  analyze_ties.py  benchmark_matrix.py  benchmark_techniques.py  generate_dataset.py  generate_fixtures.py
src/licenseid/: __init__.py  classify.py  cli.py  database.py  identifiers.py  marker.py  markers.py  matcher.py  normalize.py  similarity.py  spdx_source.py  types.py
tests/: README.md  benchmark_run.py  conftest.py  test_accuracy.py  test_api_explicit.py  test_benchmark_markers.py  test_cli_smart.py  test_config.py  test_identifiers.py  test_marker.py  test_markers.py  test_matcher.py  test_mixed_content.py  test_normalize.py  test_predicates.py  test_real_world.py
tests/fixtures/: README.md  generation-plan.md  mixed-content-analysis.md
tests/fixtures/license-data/: 0BSD.json  AAL.json  ADSL.json  AFL-1.1.json  AFL-1.2.json  AFL-2.0.json  AFL-2.1.json  AFL-3.0.json  AGPL-1.0-only.json  AGPL-1.0-or-later.json  AGPL-3.0-only.json  AGPL-3.0-or-later.json  ALGLIB-Documentation.json  AML-glslang.json  AML.json  AMPAS.json  ANTLR-PD-fallback.json  ANTLR-PD.json  APAFML.json  APL-1.0.json  APSL-1.0.json  APSL-1.1.json  APSL-1.2.json  APSL-2.0.json  ASWF-Digital-Assets-1.0.json  AdaCore-doc.json  Adobe-2006.json  Adobe-Display-PostScript.json  Adobe-Utopia.json  Advanced-Cryptics-Dictionary.json  Aladdin.json  Apache-1.0.json  Apache-1.1.json  Apache-2.0.json  App-s2p.json  Artistic-1.0-Perl.json  Artistic-1.0-cl8.json  Artistic-1.0.json  Artistic-2.0.json  Aspell-RU.json  (+516 more)
tests/fixtures/license-id/: license_ids.json
tests/fixtures/license-markers/: CITATION.cff  CONTRIBUTING  COPYING  LICENSE.rst  pyproject.toml  setup.py
tests/fixtures/license-markers/Apache-2.0/: package.json
tests/fixtures/license-markers/BSD-2-Clause/: freebsd.txt
tests/fixtures/license-markers/FreeBSD-DOC/: freebsd-doc.txt
tests/fixtures/license-markers/GPL-3.0-or-later/: gnu-grep.txt
tests/fixtures/license-markers/MIT/: README.md  main.py
tests/fixtures/license-name/: license_names.json
tests/fixtures/license-text-long/: 0BSD.json  AAL.json  ADSL.json  AFL-1.1.json  AFL-1.2.json  AFL-2.0.json  AFL-2.1.json  AFL-3.0.json  AGPL-1.0-only.json  AGPL-1.0-or-later.json  AGPL-3.0-only.json  AGPL-3.0-or-later.json  ALGLIB-Documentation.json  AML-glslang.json  AML.json  AMPAS.json  ANTLR-PD-fallback.json  ANTLR-PD.json  APAFML.json  APL-1.0.json  APSL-1.0.json  APSL-1.1.json  APSL-1.2.json  APSL-2.0.json  ASWF-Digital-Assets-1.0.json  AdaCore-doc.json  Adobe-2006.json  Adobe-Display-PostScript.json  Adobe-Utopia.json  Advanced-Cryptics-Dictionary.json  Aladdin.json  Apache-1.0.json  Apache-1.1.json  Apache-2.0.json  App-s2p.json  Artistic-1.0-Perl.json  Artistic-1.0-cl8.json  Artistic-1.0.json  Artistic-2.0.json  Aspell-RU.json  (+515 more)
tests/fixtures/license-text-short/: 0BSD.json  3D-Slicer-1.0.json  AAL.json  ADSL.json  AFL-1.1.json  AFL-1.2.json  AFL-2.0.json  AFL-2.1.json  AFL-3.0.json  AGPL-1.0-only.json  AGPL-1.0-or-later.json  AGPL-3.0-only.json  AGPL-3.0-or-later.json  ALGLIB-Documentation.json  AMD-newlib.json  AMDPLPA.json  AML-glslang.json  AML.json  AMPAS.json  ANTLR-PD-fallback.json  ANTLR-PD.json  APAFML.json  APL-1.0.json  APSL-1.0.json  APSL-1.1.json  APSL-1.2.json  APSL-2.0.json  ASWF-Digital-Assets-1.0.json  ASWF-Digital-Assets-1.1.json  Abstyles.json  AdaCore-doc.json  Adobe-2006.json  Adobe-Display-PostScript.json  Adobe-Glyph.json  Adobe-Utopia.json  Advanced-Cryptics-Dictionary.json  Afmparse.json  Aladdin.json  Apache-1.0.json  Apache-1.1.json  (+655 more)
tests/fixtures/mixed-content-curated/Apache-2.0/: README.txt  tools-java.txt
tests/fixtures/mixed-content-curated/GPL-2.0-or-later/: CITATION.cff  sedcli.txt
tests/fixtures/mixed-content-curated/GPL-2.0-or-later_WITH_Font-exception-2.0/: fonts-tlwg.txt
tests/fixtures/mixed-content-curated/GPL-3.0-or-later/: README.md  gnu-grep.txt
tests/fixtures/mixed-content/AFL-1.2/: README.md  (+3 more)
(+180 files in other folders)
