[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "licenseid"
version = "0.2.1"
description = "Get the SPDX License ID from license text"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Arthit Suriyawongkul", email = "suriyawa@tcd.ie" }]
keywords = [
    "license",
    "matcher",
    "spdx",
    "license-matcher",
    "opensource",
    "licenseid",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.3",
    "rapidfuzz>=3.14.5",
    "requests>=2.33.1",
]

[project.optional-dependencies]
dev = ["coverage", "coveralls", "flake8", "mypy", "pylint", "pytest", "ruff"]
java = ["jpype1>=1.7.0"]

[project.scripts]
licenseid = "licenseid.cli:main"

[tool.coverage.paths]
source = ["src/licenseid", "**/site-packages/licenseid"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
    "raise NotImplementedError",
]
show_missing = true

[tool.coverage.run]
branch = true
source = ["licenseid"]

[tool.hatch.build.targets.sdist]
exclude = ["AGENTS.md", "GEMINI.md", "tests/fixtures/**", "scripts/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/licenseid"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pylint.main]
ignore = ["CVS"]
persistent = true

[tool.pylint.messages_control]
disable = [
    "import-outside-toplevel",
    "too-few-public-methods",
    "invalid-name",
    "broad-exception-caught",
]

[tool.pylint.reports]
evaluation = "10.0 - ((float(5 * error + warning + refactor + convention) / statement) * 10)"
output-format = "text"
reports = false

[tool.pylint.format]
max-line-length = 88

[tool.pylint.basic]
class-rgx = "[A-Z_][a-zA-Z0-9]+$"
function-rgx = "[a-z_][a-z0-9_]{2,30}$"
good-names = ["i", "j", "k", "ex", "Run", "_", "f", "r", "m", "dt", "id", "db"]
method-rgx = "[a-z_][a-z0-9_]{2,30}$"

[tool.pylint.design]
max-args = 10
max-attributes = 10
max-bool-expr = 5
max-branches = 15
max-locals = 25
max-parents = 7
max-positional-arguments = 10
max-public-methods = 20
min-public-methods = 1
max-returns = 6
max-statements = 60

[tool.pytest.ini_options]
markers = [
    "benchmark: marks tests as slow benchmark (deselect with '-m \"not benchmark\"')",
]

[tool.ruff]
line-length = 88
target-version = "py310"
